--- a/rxWeather/Base.lproj/Main.storyboard
+++ b/rxWeather/Base.lproj/Main.storyboard
@@ -971,11 +971,19 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5aT-9s-T5E" userLabel="Separator">
+                                <rect key="frame" x="50" y="560.66666666666663" width="314" height="1"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="6pQ-Yb-MFZ"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aVA-rT-eco"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="7G7-z3-hP0" firstAttribute="bottom" secondItem="aVA-rT-eco" secondAttribute="bottom" id="0fG-9j-ePx"/>
+                            <constraint firstItem="5aT-9s-T5E" firstAttribute="leading" secondItem="DAP-hd-cOZ" secondAttribute="leadingMargin" constant="30" id="2eU-Dw-q7n"/>
                             <constraint firstItem="7G7-z3-hP0" firstAttribute="trailing" secondItem="aVA-rT-eco" secondAttribute="trailing" id="Agc-fi-tbU"/>
                             <constraint firstItem="7G7-z3-hP0" firstAttribute="top" secondItem="QAh-mK-zJA" secondAttribute="bottom" constant="-16" id="HFo-8p-iS8"/>
                             <constraint firstItem="aVA-rT-eco" firstAttribute="trailing" secondItem="3rC-HC-7ZX" secondAttribute="trailing" constant="2" id="Lo9-I2-fv0"/>
@@ -986,12 +994,15 @@
                             <constraint firstItem="7G7-z3-hP0" firstAttribute="leading" secondItem="aVA-rT-eco" secondAttribute="leading" id="SuX-b9-eh7"/>
                             <constraint firstItem="YOl-XQ-3jr" firstAttribute="top" secondItem="O0X-1O-C5s" secondAttribute="top" id="WVF-JZ-9dI"/>
                             <constraint firstItem="QO9-nm-Fo8" firstAttribute="top" secondItem="DAP-hd-cOZ" secondAttribute="top" constant="70" id="a9p-Ss-Vpy"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="5aT-9s-T5E" secondAttribute="trailing" constant="30" id="cdd-mX-PxM"/>
+                            <constraint firstItem="5aT-9s-T5E" firstAttribute="centerX" secondItem="DAP-hd-cOZ" secondAttribute="centerX" id="cnN-L1-dhB"/>
                             <constraint firstItem="aVA-rT-eco" firstAttribute="trailing" secondItem="QO9-nm-Fo8" secondAttribute="trailing" constant="20" id="cpH-PV-Dnr"/>
                             <constraint firstItem="3rC-HC-7ZX" firstAttribute="leading" secondItem="aVA-rT-eco" secondAttribute="leading" constant="18" id="dQV-O1-liu"/>
                             <constraint firstItem="aVA-rT-eco" firstAttribute="trailing" secondItem="br4-WE-sXS" secondAttribute="trailing" constant="13" id="eCJ-V5-i6Z"/>
                             <constraint firstItem="br4-WE-sXS" firstAttribute="leading" secondItem="aVA-rT-eco" secondAttribute="leading" constant="27" id="p5Q-mr-7g2"/>
                             <constraint firstItem="QAh-mK-zJA" firstAttribute="top" secondItem="br4-WE-sXS" secondAttribute="bottom" constant="31.666666666666629" id="rUL-Hg-RMP"/>
                             <constraint firstItem="br4-WE-sXS" firstAttribute="top" secondItem="3rC-HC-7ZX" secondAttribute="bottom" constant="10" id="ums-1f-qe0"/>
+                            <constraint firstItem="QAh-mK-zJA" firstAttribute="top" secondItem="5aT-9s-T5E" secondAttribute="bottom" constant="10" id="vv0-mL-Gsm"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="jgY-YN-NB3">
@@ -1064,9 +1075,6 @@
                             <collectionView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hbj-lf-1Tn">
                                 <rect key="frame" x="10" y="0.0" width="394" height="140"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="140" id="Lhc-3n-BZB"/>
-                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NVI-nh-SBq">
                                     <size key="itemSize" width="200" height="150"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -1082,51 +1090,57 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Jf-Us-Otb">
-                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="150"/>
+                                                    <rect key="frame" x="0.0" y="10" width="200" height="130"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="NUp-60-3wF">
-                                                            <rect key="frame" x="10" y="10" width="180" height="130"/>
+                                                            <rect key="frame" x="10" y="10" width="180" height="110"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="8eF-eh-QFs">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="180" height="130"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="180" height="110"/>
                                                                     <subviews>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ysZ-Ss-ZaS">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="90" height="130"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="90" height="110"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="7C7-bx-Cwi">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="65"/>
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="55"/>
                                                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="16°C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAC-0P-AKk">
-                                                                                    <rect key="frame" x="0.0" y="65" width="90" height="65"/>
+                                                                                    <rect key="frame" x="0.0" y="55" width="90" height="55"/>
                                                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="30"/>
                                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                             </subviews>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="width" constant="90" id="XrU-89-iXu"/>
+                                                                            </constraints>
                                                                         </stackView>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Jh1-yt-Eh8">
-                                                                            <rect key="frame" x="90" y="0.0" width="90" height="130"/>
+                                                                            <rect key="frame" x="90" y="0.0" width="90" height="110"/>
                                                                             <subviews>
                                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DQP-CL-tfd">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="43.333333333333336"/>
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="36.666666666666664"/>
                                                                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium"/>
                                                                                 </imageView>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="clouds" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oNi-LZ-KLV">
-                                                                                    <rect key="frame" x="0.0" y="43.333333333333329" width="90" height="43.333333333333329"/>
+                                                                                    <rect key="frame" x="0.0" y="36.666666666666671" width="90" height="36.666666666666671"/>
                                                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="min/max" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tPy-wG-maH">
-                                                                                    <rect key="frame" x="0.0" y="86.666666666666671" width="90" height="43.333333333333329"/>
+                                                                                    <rect key="frame" x="0.0" y="73.333333333333329" width="90" height="36.666666666666671"/>
                                                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                             </subviews>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="width" constant="90" id="LoG-f2-mQG"/>
+                                                                            </constraints>
                                                                         </stackView>
                                                                     </subviews>
                                                                 </stackView>
@@ -1154,9 +1168,10 @@
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="7Jf-Us-Otb" firstAttribute="top" secondItem="Q2L-q5-DMo" secondAttribute="top" id="25M-Ko-piA"/>
+                                                <constraint firstAttribute="trailing" secondItem="7Jf-Us-Otb" secondAttribute="trailing" id="Lyq-Eg-kl9"/>
                                                 <constraint firstItem="7Jf-Us-Otb" firstAttribute="leading" secondItem="Q2L-q5-DMo" secondAttribute="leading" id="Ujv-RL-UcN"/>
-                                                <constraint firstAttribute="bottom" secondItem="7Jf-Us-Otb" secondAttribute="bottom" id="k4Y-Uu-Tla"/>
+                                                <constraint firstAttribute="bottom" secondItem="7Jf-Us-Otb" secondAttribute="bottom" constant="10" id="Zza-bq-A0E"/>
+                                                <constraint firstItem="7Jf-Us-Otb" firstAttribute="top" secondItem="Q2L-q5-DMo" secondAttribute="top" constant="10" id="eRC-Hk-5YV"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1183,10 +1198,10 @@
                             <constraint firstItem="MX6-f4-Xx5" firstAttribute="top" secondItem="nNP-1H-VQp" secondAttribute="top" constant="20" id="3SS-SG-YDK"/>
                             <constraint firstItem="nNP-1H-VQp" firstAttribute="trailing" secondItem="MX6-f4-Xx5" secondAttribute="trailing" constant="20" id="C8j-cM-gDw"/>
                             <constraint firstItem="MX6-f4-Xx5" firstAttribute="leading" secondItem="nNP-1H-VQp" secondAttribute="leading" constant="20" id="Jm2-Uv-cYx"/>
-                            <constraint firstAttribute="bottom" secondItem="hbj-lf-1Tn" secondAttribute="bottom" id="LQn-vD-ciD"/>
+                            <constraint firstItem="hbj-lf-1Tn" firstAttribute="top" secondItem="nNP-1H-VQp" secondAttribute="top" id="Mt1-nO-YAe"/>
                             <constraint firstItem="hbj-lf-1Tn" firstAttribute="leading" secondItem="mMj-Lp-Bfb" secondAttribute="leading" constant="10" id="Ojp-aY-ipp"/>
                             <constraint firstAttribute="trailing" secondItem="hbj-lf-1Tn" secondAttribute="trailing" constant="10" id="WMT-aa-Te6"/>
-                            <constraint firstItem="hbj-lf-1Tn" firstAttribute="top" secondItem="mMj-Lp-Bfb" secondAttribute="top" id="XFC-RN-qRT"/>
+                            <constraint firstItem="hbj-lf-1Tn" firstAttribute="bottom" secondItem="MX6-f4-Xx5" secondAttribute="bottom" id="edi-Hm-VA0"/>
                             <constraint firstItem="MX6-f4-Xx5" firstAttribute="centerX" secondItem="mMj-Lp-Bfb" secondAttribute="centerX" id="jXa-ES-2bF"/>
                             <constraint firstItem="nNP-1H-VQp" firstAttribute="bottom" secondItem="MX6-f4-Xx5" secondAttribute="bottom" constant="20" id="lUn-PA-bmG"/>
                             <constraint firstItem="MX6-f4-Xx5" firstAttribute="centerY" secondItem="mMj-Lp-Bfb" secondAttribute="centerY" id="oaN-FX-Xs8"/>
